--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     },
     "dependencies": {
         "@mendable/firecrawl-js": "^1.15.7",
+        "@types/chess.js": "^0.13.7",
         "ajv": "^8.17.1",
         "chalk": "^5.4.1",
+        "chess.js": "^1.0.0",
+        "chromadb": "^1.10.4",
         "cors": "^2.8.5",
         "discord.js": "^14.17.3",
         "express": "^4.21.2",
         "hyperliquid": "^1.5.8",
         "lerna": "^8.1.9",
-        "mongodb": "^6.12.0",
+        "mongodb": "^6.13.0",
         "prettier": "^3.4.2",
         "readline": "^1.3.0",
         "telegram": "^2.26.16",
