--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,8 @@
         "@langchain/core": "^0.3.33",
         "@langchain/textsplitters": "^0.1.0",
         "@openrouter/ai-sdk-provider": "^0.0.6",
+      
+        "chess.js": "^1.0.0-beta.6",
         "@solana/web3.js": "^1.98.0",
         "agent-twitter-client": "^0.0.16",
         "ai": "^4.1.0",
