--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "hyperliquid": "bun run examples/example-hyperliquid.ts",
         "api": "bun run examples/example-api.ts",
         "ui": "pnpm --dir clients/example-ui run dev",
+        "chess": "pnpm --dir clients/chess-ui run dev",
+        "start:chess": "bun run examples/chess-cli.ts & pnpm --dir clients/chess-ui run dev",
         "test": "bun run packages/core",
         "build": "pnpm --dir packages/core run build",
         "release": "pnpm build && pnpm prettier && npx lerna publish --no-private --force-publish",
